--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -9,7 +9,7 @@
 {% if question_list %}  <!-- 템플릿 태그: 파이썬 코드와 연결된다. -->
     <ul>
         {% for question in question_list %}
-            <li><a href="/detail/{{ question.id }}/">{{ question.subject }}</a></li>
+            <li><a href="{{ url_for('question.detail', question_id=question.id) }}">{{ question.subject }}</a></li>
         {% endfor %}
     </ul>
 {% else %}
