--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -11,15 +11,40 @@
 
 
 <div class="container my-3">
+    <!-- flash 오류 -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-danger" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
     <!-- 질문 -->
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2">
-                    {{ question.create_date|datetime }}
+                {% if question.modify_date %}
+                <!-- 수정일시 추가하기 -->
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div>{{ question.modify_date|datetime }}</div>
                 </div>
+                {% endif %}
+                <!-- username과 작성일시datetime -->
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ question.user.username }}</div>
+                    <div>{{ question.create_date|datetime }}</div>
+                </div>
+            </div>
+            <!-- 수정버튼 만들기 -->
+            <div class="my-3">
+                {% if g.user == question.user %}    <!-- 질문 수정 버튼은 로그인한 사용자와 글쓴이가 같은 경우에만 보이도록 -->
+                <a href="{{ url_for('question.modify', question_id=question.id) }}"
+                    class="btn btn-sm btn-outline-secondary">수정</a>
+                <!-- 수정버튼 옆에 삭제버튼도 추가: javascript:void(0)은 반응이 없도록 만드는 코드 -->
+                <a href="javascript:void(0)" class="delete btn btn-sm btn-outline-secondary"
+                    data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -30,9 +55,26 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2">
-                    {{ answer.create_date|datetime }}
+                <!-- 수정일시 추가하기 -->
+                {% if answer.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div>{{ answer.modify_date|datetime }}</div>
                 </div>
+                {% endif %}
+                <!-- username과 작성일시datetime -->
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ answer.user.username }}</div>
+                    <div>{{ answer.create_date|datetime }}</div>
+                </div>
+            </div>
+            <div class="my-3">
+                {% if g.user == answer.user %}
+                <a href="{{ url_for('answer.modify', answer_id=answer.id) }}"
+                    class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="#" class="delete btn btn-sm btn-outline-secondary "
+                    data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -56,11 +98,26 @@
     <!-- 답변 등록 -->
     <form action="{{ url_for('answer.create', question_id=question.id) }}" method="post" class="my-3">
         <div class="mb-3">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+            <!-- 유저 정보가 없으면 답변을 등록하지 못하게 만듦 : textarea를 disabled로 바꿔줌 -->
+            <textarea {% if not g.user %}disabled{% endif %}
+                      name="content" id="content" class="form-control" rows="10">{% if not g.user %}로그인이 필요합니다.{% endif %}</textarea>
         </div>
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
+{% endblock %}
+
+{% block script %}
+<script type='text/javascript'>
+const delete_elements = document.getElementsByClassName("delete");
+Array.from(delete_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+</script>
 {% endblock %}
 </body>
 </html>
