--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -21,7 +21,7 @@
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="card-text">{{ question.content|markdown }}</div>
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <!-- 수정일시 추가하기 -->
@@ -36,8 +36,12 @@
                     <div>{{ question.create_date|datetime }}</div>
                 </div>
             </div>
-            <!-- 수정버튼 만들기 -->
+            <!-- 추천버튼, 수정버튼, 삭제버튼 -->
             <div class="my-3">
+                <a href="javascript:void(0)" data-uri="{{ url_for('question.vote', question_id=question.id) }}"
+                    class="recommend btn btn-sm btn-outline-secondary">추천
+                    <span class="badge rounded-pill bg-success">{{ question.voter|length }}</span>
+                </a>
                 {% if g.user == question.user %}    <!-- 질문 수정 버튼은 로그인한 사용자와 글쓴이가 같은 경우에만 보이도록 -->
                 <a href="{{ url_for('question.modify', question_id=question.id) }}"
                     class="btn btn-sm btn-outline-secondary">수정</a>
@@ -51,9 +55,10 @@
     <!-- 답변 목록 -->
     <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
     {% for answer in question.answer_set %}
+    <a id="answer_{{ answer.id }}"></a>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+            <div class="card-text">{{ answer.content|markdown }}</div>
             <div class="d-flex justify-content-end">
                 <!-- 수정일시 추가하기 -->
                 {% if answer.modify_date %}
@@ -68,7 +73,12 @@
                     <div>{{ answer.create_date|datetime }}</div>
                 </div>
             </div>
+            <!-- 추천버튼, 수정버튼, 삭제버튼 -->
             <div class="my-3">
+                <a href="javascript:void(0)" data-uri="{{ url_for('answer.vote', answer_id=answer.id) }}"
+                   class="recommend btn btn-sm btn-outline-secondary">추천
+                    <span class="badge rounded-pill bg-success">{{ answer.voter|length }}</span>
+                </a>
                 {% if g.user == answer.user %}
                 <a href="{{ url_for('answer.modify', answer_id=answer.id) }}"
                     class="btn btn-sm btn-outline-secondary">수정</a>
@@ -107,12 +117,21 @@
 </div>
 {% endblock %}
 
+<!-- 자바스크립트 -->
 {% block script %}
 <script type='text/javascript'>
 const delete_elements = document.getElementsByClassName("delete");
 Array.from(delete_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+const recommend_elements = document.getElementsByClassName("recommend");
+Array.from(recommend_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 추천하시겠습니까?")) {
             location.href = this.dataset.uri;
         };
     });
