--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -5,10 +5,24 @@
     <title></title>
 </head>
 <body>
-<!--<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">-->
+<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 {% extends 'base.html' %}
 {% block content %}
 <div class="container my-3">
+    <!-- 검색 창 + 질문 등록하기 위치 수정 -->
+    <div class="row my-3">
+        <div class="col-6">
+            <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- 질문 목록 -->
     <table class = "table">
         <thead>
@@ -46,7 +60,7 @@
         <!-- 이전페이지 -->
         {% if question_list.has_prev %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.prev_num }}">이전</a>
+            <a class="page-link" data-page="{{ question_list.prev_num }}" href="javascript:void(0)">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -58,7 +72,7 @@
         {% if page_num %}
         {% if page_num != question_list.page %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            <a class="page-link" data-page="{{ page_num }}" href="javascript:void(0)">{{ page_num }}</a>
         </li>
         {% else %}
         <li class="page-item active" aria-current="page">
@@ -74,7 +88,7 @@
         <!-- 다음페이지 -->
         {% if question_list.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_num }}">다음</a>
+            <a class="page-link" data-page="{{ question_list.next_num }}" href="javascript:void(0)">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -83,8 +97,31 @@
         {% endif %}
     </ul>
     <!-- 페이징처리 끝 -->
-    <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
+    <!-- <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a> -->
 </div>
+<!-- page와 kw를 동시에 GET 방식으로 요청할 수 있는 form 엘리먼트 -->
+<form id="searchForm" method="get" action="{{ url_for('question._list') }}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
+{% endblock %}
+<!-- 페이징과 검색을 요청하는 자바스크립트 코드블럭 -->
+{% block script %}
+<script type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+    document.getElementById('searchForm').submit();
+});
+</script>
 {% endblock %}
 </body>
 </html>
