조회수 컬럼 만들기

--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -31,6 +31,7 @@
             <th style="width:50%">제목</th>
             <th>글쓴이</th>
             <th>작성일시</th>
+            <th>조회수</th>
         </tr>
         </thead>
         <tbody>
@@ -46,6 +47,7 @@
             </td>
             <td>{{ question.user.username }}</td>           <!-- 글쓴이 추가 -->
             <td>{{ question.create_date|datetime }}</td>    <!-- 파이프라인 문자와 함께 datetime 필터를 적용-->
+            <td>{{ question.hits }}</td>                    <!-- 조회수 추가 -->
         </tr>
         {% endfor %}
         {% else %}
