메ì인페이지 만들기

--- a/eyzproj/templates/question/question_detail.html
+++ b/eyzproj/templates/question/question_detail.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>질문 상세보기</title>
 </head>
 <body>
-<!--<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">-->
+<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 {% extends 'base.html' %}
 {% block content %}
 
