--- a/eyzproj/templates/question/question_form.html
+++ b/eyzproj/templates/question/question_form.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>질문 등록하기</title>
 </head>
 <body>
 {% extends 'base.html' %}
 {% block content %}
 <!-- 질문 등록 -->
 <div class="container">
-    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+    <h5 class="my-3 border-bottom pb-2">질문 등록</h5>
     <form method="post" class="my-3">
 
         {{ form.csrf_token }}
