--- a/eyzproj/templates/answer/answer_form.html
+++ b/eyzproj/templates/answer/answer_form.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>답변 수정하기</title>
 </head>
 <body>
     {% extends 'base.html' %}
