--- a/eyzproj/templates/auth/login.html
+++ b/eyzproj/templates/auth/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>로그인</title>
 </head>
 <body>
 {% extends "base.html" %}
