--- a/eyzproj/templates/base.html
+++ b/eyzproj/templates/base.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
-    <!-- pybo CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Hello, pybo!</title>
+    <title>Hello!</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
