--- a/eyzproj/templates/question/question_list.html
+++ b/eyzproj/templates/question/question_list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>질문 목록</title>
 </head>
 <body>
 <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
