'이미지위치수정'

--- a/eyzproj/templates/main.html
+++ b/eyzproj/templates/main.html
@@ -16,7 +16,7 @@
         <div class="card-body">
             <div class="card-text">
                 <br>
-                <img src="static/eyz.jpg" width="500">
+                <img src="../static/eyz.jpg" width="500">
                 <br>
                 <h4>반갑습니다! 질문 목록으로 이동하려면 아래 버튼을 눌러주세요.</h4>
                 <br>
